welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: '=' expected but ';' found.
var Couleur==false;
                  ^